loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:15: error: 'while' expected but '}' found.
}
^