loopdowhile.Poucet2.scala.code
var cookies : Int = 0
while (exitReached() == true) {
  do {
    foward()
    if (isOverBaggle()==true){
      cookies = cookies + 1
    }
   if (cookies <= 2){
     right()
   } 
    else {
      left()
    }
  }
}
foward()